# genGo

./: README.md  pyproject.toml
src/gengo/: __init__.py  calc.py  cli.py  core.py  go.py  graphene.py  holes.py  io.py
test_output/: go_test_frm-nonp-lmp-charge_lmp-charge.lmp  go_test_frm-nonp-lmp-charge_lmp.lmp  go_test_frm-nonp-lmp-charge_xyz.xyz  go_test_frm-nonp-lmp_lmp-charge.lmp  go_test_frm-nonp-lmp_lmp.lmp  go_test_frm-nonp-lmp_xyz.xyz  go_test_frm-nonp-pdb_lmp-charge.lmp  go_test_frm-nonp-pdb_lmp.lmp  go_test_frm-nonp-pdb_xyz.xyz  go_test_frm-nonp-xyz_lmp-charge.lmp  go_test_frm-nonp-xyz_lmp.lmp  go_test_frm-nonp-xyz_xyz.xyz  go_test_frm-p-lmp-charge_lmp-charge.lmp  go_test_frm-p-lmp-charge_lmp.lmp  go_test_frm-p-lmp-charge_xyz.xyz  go_test_frm-p-lmp_lmp-charge.lmp  go_test_frm-p-lmp_lmp.lmp  go_test_frm-p-lmp_xyz.xyz  go_test_frm-p-pdb_lmp-charge.lmp  go_test_frm-p-pdb_lmp.lmp  go_test_frm-p-pdb_xyz.xyz  go_test_frm-p-xyz_lmp-charge.lmp  go_test_frm-p-xyz_lmp.lmp  go_test_frm-p-xyz_xyz.xyz  pg_test_nonp_lmp-charge.lmp  pg_test_nonp_lmp.lmp  pg_test_nonp_xyz.xyz  pg_test_p_lmp-charge.lmp  pg_test_p_lmp.lmp  pg_test_p_xyz.xyz
